# Synth

./: .gitignore  BasicSynth.h  BasicSynthEditor.h  BasicSynthProcessor.cpp  BasicSynthProcessor.h  CMakeLists.txt  LICENSE  README.md  installer.nsi  pyproject.toml  test_midi.py
.github/workflows/: build.yml  lint.yml  release.yml
